add file book1-100k.csv

--- a/1712613-BuiHuuNghia.ipynb
+++ b/1712613-BuiHuuNghia.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# ĐỒ ÁN CUỐI KÌ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bùi Hữu Nghĩa - 1712613"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
