kham pha du lieu

--- a/1712613-BuiHuuNghia.ipynb
+++ b/1712613-BuiHuuNghia.ipynb
@@ -19,11 +19,265 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TỔNG QUAN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1 - THU THẬP DỮ LIỆU"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ở đây em có dữ liệu là thông tin về các cuốn sách như tên, ngôn ngữ, rating,...  \n",
+    "Dữ liệu được lấy từ trang [kaggle.com](https://www.kaggle.com)  \n",
+    "[link dữ liệu](https://www.kaggle.com/bahramjannesarr/goodreads-book-datasets-10m?select=book1-100k.csv)  \n",
+    "Người sở hữu: Bahram Jannesar & Soroush Ghaderi  \n",
+    "License: CC0: Public Domain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2 - KHÁM PHÁ DỮ LIỆU"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trước khi đưa ra câu hỏi để trả lời, ta cần biết dữ liệu có gì. Vì vậy, đầu tiên ta cần đọc dữ liệu"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dữ liệu lưu trữ thông tin của hơn 50.000 cuốn sách, có id từ 1 đến 100.000 vì vậy nên file có tên là book1-1000k.  \n",
+    "Để biểu diễn trực quan dữ liệu, em dùng Dataframe của pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "books_df = pd.read_csv('book1-100k.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Xem thử thông tin các cuốn sách trông như thế nào"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>RatingDist1</th>\n",
+       "      <th>pagesNumber</th>\n",
+       "      <th>RatingDist4</th>\n",
+       "      <th>RatingDistTotal</th>\n",
+       "      <th>PublishMonth</th>\n",
+       "      <th>PublishDay</th>\n",
+       "      <th>Publisher</th>\n",
+       "      <th>CountsOfReview</th>\n",
+       "      <th>PublishYear</th>\n",
+       "      <th>Language</th>\n",
+       "      <th>Authors</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>RatingDist2</th>\n",
+       "      <th>RatingDist5</th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>RatingDist3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Harry Potter and the Half-Blood Prince (Harry ...</td>\n",
+       "      <td>1:9896</td>\n",
+       "      <td>652</td>\n",
+       "      <td>4:556485</td>\n",
+       "      <td>total:2298124</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Scholastic Inc.</td>\n",
+       "      <td>28062</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>J.K. Rowling</td>\n",
+       "      <td>4.57</td>\n",
+       "      <td>2:25317</td>\n",
+       "      <td>5:1546466</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3:159960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Harry Potter and the Order of the Phoenix (Har...</td>\n",
+       "      <td>1:12455</td>\n",
+       "      <td>870</td>\n",
+       "      <td>4:604283</td>\n",
+       "      <td>total:2358637</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Scholastic Inc.</td>\n",
+       "      <td>29770</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>J.K. Rowling</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>2:37005</td>\n",
+       "      <td>5:1493113</td>\n",
+       "      <td>0439358078</td>\n",
+       "      <td>3:211781</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Id                                               Name RatingDist1  \\\n",
+       "0   1  Harry Potter and the Half-Blood Prince (Harry ...      1:9896   \n",
+       "1   2  Harry Potter and the Order of the Phoenix (Har...     1:12455   \n",
+       "\n",
+       "   pagesNumber RatingDist4 RatingDistTotal  PublishMonth  PublishDay  \\\n",
+       "0          652    4:556485   total:2298124            16           9   \n",
+       "1          870    4:604283   total:2358637             1           9   \n",
+       "\n",
+       "         Publisher  CountsOfReview  PublishYear Language       Authors  \\\n",
+       "0  Scholastic Inc.           28062         2006      eng  J.K. Rowling   \n",
+       "1  Scholastic Inc.           29770         2004      eng  J.K. Rowling   \n",
+       "\n",
+       "   Rating RatingDist2 RatingDist5        ISBN RatingDist3  \n",
+       "0    4.57     2:25317   5:1546466         NaN    3:159960  \n",
+       "1    4.50     2:37005   5:1493113  0439358078    3:211781  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "books_df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(58292, 18)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "books_df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vậy dữ liệu có kích thước là 58292 dòng x 18 cột"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thông tin về các cột như sau:  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3 - CÁC CÂU HỎI CẦN ĐƯỢC TRẢ LỜI TỪ DỮ LIỆU"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4 - TRẢ LỜI CÂU HỎI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5 - NHÌN LẠI QUÁ TRÌNH THỰC HIỆN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6 - TÀI LIỆU THAM KHẢO"
+   ]
   }
  ],
  "metadata": {
