doi bo du lieu khac, thuc hien lai cac qua trinh

--- a/1712613-BuiHuuNghia.ipynb
+++ b/1712613-BuiHuuNghia.ipynb
@@ -677,21 +677,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tác giả nào được yêu thích nhất"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### So sánh số lượng sách được phát hành theo thời gian"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Sách được phát hành vào năm nào được yếu thích nhất và ngược lại"
+    "- Tác giả nào được yêu thích nhất\n",
+    "- So sánh số lượng sách được phát hành theo thời gian\n",
+    "- Sách được yêu thích nhất từng năm và ngược lại"
    ]
   },
   {
@@ -701,6 +689,127 @@
    },
    "source": [
     "## 4 - TRẢ LỜI CÂU HỎI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tác giả nào được yêu thích nhất"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tìm tác giả được yêu thích nhất dựa theo dữ liệu đã cho, chỉ tính trong dữ liệu. Em sẽ tính trung bình rating các cuốn sách của từng tác giả và tác giả có trung bình rating cao nhất là được yêu thích nhất  \n",
+    "Đầu tiên tạo ra 1 Dictionary lưu thông tin tác giả và rating các cuốn sách của tác giả đó"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "author_rating_dict = {} # dict chứa thông tin tác giả và rating có dạng {'author': [rating, rating, ...], ...}\n",
+    "\n",
+    "author_and_rating = books_df2.filter(items=['Authors', 'Rating']) # df gồm 2 cột là Authors và Rating\n",
+    "\n",
+    "for i in range(len(author_and_rating)): # duyệt từng dòng\n",
+    "    author, rating = author_and_rating.loc[i, ['Authors', 'Rating']]\n",
+    "    if author in author_rating_dict:\n",
+    "        author_rating_dict[author].append(rating) \n",
+    "    else:\n",
+    "        author_rating_dict[author] = [rating]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tạo dict chứa thông tin tác giả và trung bình rating sách\n",
+    "average_rating_dict = {}\n",
+    "for author in author_rating_dict:\n",
+    "    average_rating_dict[author] = np.mean(author_rating_dict[author])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sau khi được 1 Dictionary chứa thông tin tác giả và rating trung bình thì chỉ cần tìm max của các trung bình đó thì được tác giả có rating sách cao nhất và cũng được yêu thích nhất"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sort dict theo value giảm dần thì rating trung bình cao nhất sẽ ở đầu dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_rating_dict = dict(sorted(average_rating_dict.items(), key = lambda item: item[1], reverse = True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lấy ra mảng các key (tên tác giả)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Phil T. O'Brien\""
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(average_rating_dict.keys())[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'c', 'b']"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = {\n",
+    "    'a': 4,\n",
+    "    'b': 1,\n",
+    "    'c': 2\n",
+    "}\n",
+    "a = dict(sorted(a.items(), key = lambda item: item[1], reverse = True))\n",
+    "list(a.keys())"
    ]
   },
   {
@@ -719,6 +828,14 @@
    },
    "source": [
     "## 6 - TÀI LIỆU THAM KHẢO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [kaggle.com](https://www.kaggle.com/) để lấy dữ liệu\n",
+    "- Thư viện [Pandas](https://pandas.pydata.org/pandas-docs/stable/index.html)"
    ]
   }
  ],
