--- a/1712613-BuiHuuNghia.ipynb
+++ b/1712613-BuiHuuNghia.ipynb
@@ -1258,6 +1258,22 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Khó khăn gặp phải:\n",
+    "- Hơi mất thời gian để tìm được dữ liệu phù hợp\n",
+    "- Đặt ra các câu hỏi sao cho vừa có ích, vừa nằm trong khả năng xử lí\n",
+    "\n",
+    "Đã học được:\n",
+    "- Quy trình làm khoa học dữ liệu\n",
+    "- Cách dùng các thư viện python để phục vụ quá trình xử lí, khai thác thông tin\n",
+    "- Biết thêm về kaggle\n",
+    "\n",
+    "Nếu có thêm thời gian em sẽ khai thác thêm dữ liệu bằng cách đặt ra thêm các câu hỏi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true
    },
